# action-adjuster

./: .gitignore  README.md  environment.yml  next_time.md  pyproject.toml  related_work.md  requirements.lock.txt  requirements.txt  settings.json  update_dependencies.ps1  warthog.env.sh
__dependencies__/: __dependency_mapping__.json  __init__.py  grug_test  json_fix  rigorous_recorder  rigourous_recorder
__dependencies__/__sources__/blissful_basics/: .gitrepo  pyproject.toml
__dependencies__/__sources__/cool_cache/: .gitrepo  README.md  pyproject.toml
__dependencies__/__sources__/cool_cache/main/cool_cache/: __init__.py
__dependencies__/__sources__/cool_cache/main/cool_cache/__dependencies__/__sources__/file_system_py/: .gitrepo
__dependencies__/__sources__/cool_cache/main/cool_cache/__dependencies__/__sources__/super_hash/: .gitrepo
__dependencies__/__sources__/cool_cache/tests/: test.py
__dependencies__/__sources__/elegant_events/: .gitrepo  README.md
__dependencies__/__sources__/grug_test/: .gitrepo  README.md  pyproject.toml
__dependencies__/__sources__/informative_iterator/: .gitrepo  README.md  pyproject.toml
__dependencies__/__sources__/quik_config/: .gitrepo
__dependencies__/__sources__/rigorous_recorder/: .gitrepo
__dependencies__/__sources__/super_hash/: .gitrepo  settings.json
__dependencies__/__sources__/telepy_notify/: .gitrepo  README.md  pyproject.toml
__dependencies__/__sources__/telepy_notify/main/telepy_notify/__dependencies__/__sources__/informative_iterator/: .gitrepo  pyproject.toml
__dependencies__/__sources__/telepy_notify/main/telepy_notify/__dependencies__/__sources__/informative_iterator/main/informative_iterator/: __init__.py
__dependencies__/__sources__/telepy_notify/main/telepy_notify/__dependencies__/__sources__/informative_iterator/settings/extensions/#standard/commands/tools/file_system/: add_execute_permission
__dependencies__/__sources__/trivial_torch_tools/: .gitrepo  README.md  pyproject.toml
__dependencies__/__sources__/trivial_torch_tools/main/: setup.py
__dependencies__/__sources__/trivial_torch_tools/main/trivial_torch_tools/: __init__.py  core.py  generics.py  image.py  main.py  misc.py  model.py  one_hots.py
__dependencies__/__sources__/trivial_torch_tools/main/trivial_torch_tools/__dependencies__/__sources__/file_system_py/: .gitrepo
__dependencies__/__sources__/trivial_torch_tools/main/trivial_torch_tools/__dependencies__/__sources__/super_hash/: .gitrepo
__dependencies__/blissful_basics/: .gitrepo
__dependencies__/elegant_events/: .gitrepo  pyproject.toml
__dependencies__/elegant_events/main/elegant_events/: __init__.py  settings.json
__dependencies__/elegant_events/main/elegant_events/__dependencies__/: websockets
__dependencies__/elegant_events/tests/: 1.py
commands/: update_dependencies.ps1
commands/run/: main  smoketest
main/: .envrc  action_adjuster.py  config.py  config.yaml  data_structures.py  main.py  misc.py  notes.py  paper.latex  prediction.py  render.py  todo.md
main/action_adjuster.py.grug/objective_function/: 021e2b25ed48.input.yaml  021e2b25ed48.output.yaml  339dd81ebcff.input.yaml  4a01d0d4233a.input.yaml  4a01d0d4233a.output.yaml  6580865e7f5d.input.yaml  7e8929c74d3f.input.yaml  9670a29a1f6a.input.yaml  9670a29a1f6a.output.yaml  b3754ac82838.input.yaml  b3754ac82838.output.yaml  c33fd88f1117.output.yaml
main/envs/: warthog.py  warthog_simple.py
main/generic_tools/: functions.py  geometry.py  grug_tests.py  hill_climbing.py  notifier.py  plot_test.py  plotting.py  skid_steer_rc_car.py
main/generic_tools/universe/: agent.py  runtimes.py  timestep.py
main/main.py.grug/main_smoke_test_warthog/: 9712559107e5.output.yaml  smoke1.input.yaml
main/main/plots/: main_comparision.html
main/plots/: correction_comparison.py  main_comparision.html  main_comparision.py  main_comparision_curve_loss_mean.html  main_comparision_curve_loss_median.html  main_comparision_curve_loss_variance.html  main_comparision_distance_to_optimal_mean.html  main_comparision_distance_to_optimal_median.html  main_comparision_distance_to_optimal_variance.html  main_comparision_line_fit_score_mean.html  main_comparision_line_fit_score_median.html  main_comparision_line_fit_score_variance.html  main_comparision_mean.html  main_comparision_median.html  main_comparision_reward_mean.html  main_comparision_reward_median.html  main_comparision_reward_variance.html  recent_run.py
main/policies/: bicycle.py  dummy.py  kinematic_sup0.py  original.py  retrained.py
main/records/baseline_0.20/: config.yaml  recorder.yaml
main/records/heavy_baseline/: config.yaml  recorder.yaml
main/records/heavy_matrix/: config.yaml  (+1 more)
main/runtimes/: warthog_ros.py  warthog_ros_client.py
main/saved_policies/: original.pt
main/specific_tools/: comparision_runs.py  data_gathering.py  test_rospy_publish.py  test_rospy_subscribe.py  train_ppo.py  warthog_faker.py
main/tools/: geometry.py
main/waypoint_paths/: basic.csv  concrete1.csv  real1.csv  straight_line.csv
settings/during_start_prep/: 089_001__osascript_injection__.sh
(+3919 files in other folders)
