[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
rigorous-recorder = "^1.3.0"
icecream = "^2.1.3"
blissful-basics = "^0.2.23"
trivial-torch-tools = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
