[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
rigorous-recorder = "^1.3.0"
icecream = "^2.1.3"
blissful-basics = "^0.2.23"
trivial-torch-tools = "^0.5.1"
plotly = "^5.13.1"
matplotlib = "^3.7.1"
quik-config = "^1.7.0"
cma = "^3.3.0"
tdqm = "^0.0.1"
torch = "1.13.1"
cool_cache = "0.3.0"
stable-baselines3 = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
