[tool.poetry]
name = "elegant_events"
version = "0.1.0"
description = "Easily send data and events between processes, or within a single process"
authors=[ "Jeff Hykin" ]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/elegant_events'
license = "MIT"
main_module_path = "main/elegant_events"

[[tool.extra.pure_python_packages]]
path = "main/elegant_events"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
