[tool.poetry]
name = "cool_cache"
version = "0.3.6"
description = "Cache any function to disk"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/cool_cache.git'
license = "MIT"
main_module_path = "main/cool_cache"

[[tool.extra.pure_python_packages]]
path = "main/cool_cache"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"
file-system-py = "0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
