[tool.poetry]
name = "trivial_torch_tools"
version = "0.5.1"
description = "Decorators for reducing pytorch boilerplate"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/trivial-torch-tools.git'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pip = "20.1.1"
simple-namespace = "^1.0.0"
torchvision = "^0.9.0"
file-system-py = "^0.0.6"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"
keyring = "23.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
