[tool.poetry]
name = "informative_iterator"
version = "2.1.1"
description = "A replacement for tqdm"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/informative-iterator.git'
license = "MIT"
main_module_path = "main/informative_iterator"

[[tool.extra.pure_python_packages]]
path = "main/informative_iterator"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pip = "20.1.1"
super_map = ">=1.1.1"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"
file-system-py = "0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
